--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="activities.activity_add_new_entry.AddNewEntryActivity"></activity>
-        <activity android:name="activities.activity_main.MainActivity">
+        <activity android:name="activities.activity_add_new_entry.AddNewEntryActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name="activities.activity_main.MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
