--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.windspeeddeductiontool">
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.CAMERA"/>
-
-    <uses-feature
-        android:name="android.hardware.location.gps"
-        android:required="true" />
-    <uses-feature
-        android:name="android.hardware.camera2"
-        android:required="false" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,9 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="activities.activity_add_new_entry.AddNewEntryActivity"
-            android:screenOrientation="portrait"></activity>
-        <activity android:name="activities.activity_main.MainActivity"
+        <activity android:name="activities.activity_gallery.GalleryActivity"></activity>
+        <activity
+            android:name="activities.activity_add_new_entry.AddNewEntryActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="activities.activity_main.MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,7 +23,17 @@
             </intent-filter>
         </activity>
 
-        <service android:name="helper_classes.LocationService"/>
+        <service android:name="helper_classes.LocationService" />
     </application>
+    <uses-feature
+        android:name="android.hardware.camera2"
+        android:required="false" />
+
+    <uses-feature
+        android:name="android.hardware.location.gps"
+        android:required="true" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
 </manifest>
