--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,15 @@
         </activity>
 
         <service android:name="helper_classes.LocationService" />
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.windspeeddeductiontool.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"></meta-data>
+        </provider>
     </application>
     <uses-feature
         android:name="android.hardware.camera2"
