--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.windspeeddeductiontool">
 
+    <uses-feature
+        android:name="android.hardware.camera2"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.location.gps"
+        android:required="true" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +21,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="activities.activity_gallery.GalleryActivity"></activity>
+        <activity android:name="activities.activity_envelope_damage.activity_envelope_damage"></activity>
+        <activity android:name="activities.activity_gallery.GalleryActivity" />
         <activity
             android:name="activities.activity_add_new_entry.AddNewEntryActivity"
             android:screenOrientation="portrait" />
@@ -24,6 +37,7 @@
         </activity>
 
         <service android:name="helper_classes.LocationService" />
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.example.windspeeddeductiontool.fileprovider"
@@ -31,21 +45,8 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths"></meta-data>
+                android:resource="@xml/file_paths" />
         </provider>
     </application>
-    <uses-feature
-        android:name="android.hardware.camera2"
-        android:required="false" />
-
-    <uses-feature
-        android:name="android.hardware.location.gps"
-        android:required="true" />
-    <uses-permission android:name="android.permission.CAMERA" />
-
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
 </manifest>
