--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="activities.activity_envelope_damage.activity_envelope_damage"></activity>
+        <activity android:name="activities.activity_envelope_damage.EnvelopeDamage"></activity>
         <activity android:name="activities.activity_gallery.GalleryActivity" />
         <activity
             android:name="activities.activity_add_new_entry.AddNewEntryActivity"
